data: Fix dark mode star color CSS
The stars were shaded based on the background color, use an alpha of the
foreground color instead.

--- a/data/org.gnome.Music.css
+++ b/data/org.gnome.Music.css
@@ -69,12 +69,12 @@ box#ArtistAlbumsWidget .artist-label {
    enable transitions between the non-starred and starred icons. */
 .star {
     background-image: -gtk-icontheme('non-starred-symbolic');
-    color: shade(@theme_bg_color, 0.8);
+    color: alpha(@theme_fg_color, 0.3);
     transition: 100ms linear;
 }
 
 .star:hover {
-    color: shade(@theme_bg_color, 0.5);
+    color: alpha(@theme_fg_color, 0.6);
 }
 
 .star:selected {
